err/cloudshellcontroller.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CloudshellController'...
Compiling './lib/python3.5/site-packages/CloudshellController/__init__.py'...
***   File "./lib/python3.5/site-packages/CloudshellController/__init__.py", line 35
    print 'There was probably an issue with your JSON. %s' % e.message
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/CloudshellController-0.12.dist-info'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/api'...
Listing './lib/python3.5/site-packages/cloudshell/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/helpers/scripts'...
Compiling './lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py'...
***   File "./lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py", line 110
    print 'No config file found at:', filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudshell_automation_api-8.2.0.111.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './my_data'...
Listing './share'...
Listing './share/python-wheels'...
